2008-11-27  Sergey Poznyakoff  <gray@gnu.org.ua>

	Add iterator support to opool.
	
	* include/mailutils/opool.h (mu_opool_get_iterator): New function.
	* mailbox/opool.c (mu_opool_get_iterator): New function.
	* mailbox/hdritr.c (hdr_data_dup): Bugfix: notify owner about the
	new iterator.

2008-11-21  Sergey Poznyakoff  <gray@gnu.org.ua>

	* auth/sql.c (get_field): NULL value in an optional field is
	equivalent to MU_ERR_NOENT.

2008-11-18  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mailbox/amd.c (_amd_attach_message): Call mu_body_clear_modified
	and mu_message_clear_modified after constructing the message to
	make sure it is not marked as modified.

2008-11-16  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mailbox/argcv.c (quote_transtab): Add vertical tabulation
	character. 

2008-11-15  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mailbox/cfg_driver.c (mu_cfg_tree_reduce): Format parse tree
	before scanning the tree.
	* mailbox/cfg_parser.y (block rule): Accept empty blocks.
	(parse_param): bail out if callback is not declared when it
	should.
	* mailbox/daemon.c (mu_daemon_create_pidfile)
	(mu_daemon_remove_pidfile): If running with UID=0 and EUID != 0,
	temporarily switch to EUID=0 for accessing pidfile (when
	creating or deleting).

2008-11-12  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mailbox/cfg_parser.y (mu_cfg_format_error): Raise
	mu_cfg_error_count only if level is less or equal to error.
	(_scan_tree_helper): "unknown section" is a warning.

	* configure.ac, NEWS: Version 1.9.93.
	* include/mailutils/libargp.h (mu_app_cfg_verifier): New extern.
	* libargp/muinit.c (mu_app_cfg_verifier): New variable.
	(mu_app_init): Call mu_app_cfg_verifier if in lint mode.
	* mailbox/cfg_driver.c (mu_cfg_tree_reduce): Return 0 if no
	configuration is supplied.
	
2008-11-11  Sergey Poznyakoff  <gray@gnu.org.ua>

	* libargp/muinit.c (mu_app_init): Do not parse configs if
	--config-help was given.

2008-11-09  Wojciech Polak  <polak@gnu.org>

	Fix typos.
	